# duckduckgo-mcp

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/duckduckgo/: __init__.py  cli.py  mcp.py
tests/: test_hello.py  test_mcp.py  test_search.py
