[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo"
version = "0.0.1"
description = "duckduckgo cli/mcp"
authors = [{name = "varlabz", email = "varlabz@umdoze.com"}]
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.0",
    "mcp[cli]>=1.14.0",
]

[project.scripts]
duckduckgo = "duckduckgo.cli:main"
duckduckgo-mcp = "duckduckgo.mcp:main"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "COM812", "ISC001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
